# autocura

./: .gitignore  .namingconvention  CHANGELOG.md  Dockerfile  Dockerfile.api  Dockerfile.base  Dockerfile.diagnostico  Dockerfile.gerador  Dockerfile.guardiao  Dockerfile.monitor  Dockerfile.observador  Dockerfile.omega  Dockerfile.validador  README.md  SISTEMA_COMPLETO_STATUS.md  admin-rolebinding.yaml  apply_all_components.ps1  atualizar_memoria.py  atualizar_memoria_docker.py  atualizar_memoria_fase_beta.py  build-images.sh  check_omega_status.ps1  consciousness_data_20250528_062956.json  coverage.xml  daemon.json  dashboard.html  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.omega.yml  docker-compose.yml  exemplo_otimizacao_ia.md  generate_ssl.ps1  main.py  main_modular.py  main_new_structure.py  mapa_containers_modulos.md  memoria_compartilhada.json  memoria_test.json  output.json  plano_correcao_modulos.md  (+24 more)
.github/workflows/: ci.yml  testes.yml
app_package_placeholders/config/: meuapp.conf  meuapp.conf.template  meuapp.service
archive/: output_1747842507.4680586.json
assets/: teste_api.html
autocura/: __init__.py
autocura/core/: __init__.py
autocura/services/: __init__.py
backup_reorganization/: README.md  main.py  requirements.txt
backup_reorganization/src/: __init__.py  main.py
backup_reorganization/tests/: __init__.py  conftest.py  pytest.ini  pytest_async.ini  test-results.xml
config/: .pre-commit-config.yaml  acoes.json  acoes_config.json  agendador.json  autocura.yaml  cache.json  config.yaml  config.yaml.example  development.yaml  diagnostico_avancado.json  docker-compose.yml  monitoramento.json  monitoramento.yaml  notificacoes.json  prometheus.yml  regras_diagnostico.json  requirements.txt  security_config.json  sistema.json  testes.yaml
config/alertmanager/: testes.yml
config/cadvisor/: cadvisor.yml  config.yml
config/dev/: config.yaml
contexto/: atualizacao_api_principal.md  contexto_sistema.md  instrucoes_ia.md  sistema_registro_contexto.md  verificacao_inicial.md
docker/: Dockerfile  Dockerfile.api  Dockerfile.guardiao  Dockerfile.monitor  Dockerfile.tests  README.deploy.md  build.ps1  build.sh  docker-compose.simple.yml  docker-compose.yml
docs/: 00-Sistema.md  01_arquitetura_infraestrutura.md  02_desenvolvimento_implementacao.md  03_seguranca_conformidade.md  04_operacao_monitoramento.md  05_devops_cicd.md  06_interface_experiencia.md  07_gestao_dados_consciencia.md  08_ia_ml.md  09_documentacao_suporte.md  10_analises_relatorios.md  CHANGELOG.md  DEPLOYMENT_PRODUCTION.md  ESTRUTURA_ORGANIZADA.md  INTEGRACAO_COMPLETA_DASHBOARD.md  LICENSE  OMEGA_IMPLEMENTATION_COMPLETE.md  README.md  SOLUCAO_CONTAINER_DASHBOARD.md  Untitled.md  analise_consciencia_situacional.md  api.md  arquitetura.md  arquitetura_integrada.txt  autoaperfeicoamento.md  contexto_sistema.md  data_sources.md  documentacao_completa.md  estado_atual_sistema.md  estrutura_arquivos.md  estrutura_arquivos_eticos.md  estrutura_diretorios.md  estrutura_projeto.md  failure_types.md  fase1_service_mesh.md  fase2_bulkhead.md  fase3_cqrs.md  fase4_circuit_breaker.md  fluxo_autonomia.py  frontend_requirements.md  (+42 more)
frontend/: frontend_server.py
k8s/: executor-deployment.yaml  portal.yaml
kubernetes/: apply.sh  deployment.yaml  kustomization.yaml
loki/: loki-config.yml
memoria/: memoria_compartilhada.json  monitoramento.json  test_dependencias_integration.json
modulos/: README.md  __init__.py
nginx/: .htpasswd
observabilidade/: requirements.txt
prometheus/: alertmanager.yml  prometheus.yml
promtail/: config.yml  promtail-config.yml
reports_and_guides/: analise_aderencia_objetivos_autocura.md  analise_novas_capacidades_consciencia.md  instrucoes_teste_kafka.md  lista_arquivos_finais_projeto.md  path_validation_report.md  plano_integracao_novas_capacidades.md  relatorio_guardiao_cognitivo.md  relatorio_novas_funcionalidades_consciencia_situacional.md
scripts/: 00-start_all.ps1  03_configurar_usuarios_grupos.sh  05_baixar_artefatos_aplicacao.sh  06_configurar_aplicacao.sh  10_iniciar_frontend.sh  atualizar_projeto.py  autocura.ps1  autocura.sh  build-images.ps1  build.sh  complete_modular_structure.py  consolidar_estrutura.py  debug_main_py.bat  deploy_modulos.ps1  deploy_modulos.sh  deploy_production.py  diagnostico_main.py  fix_api_container.bat  health_check.ps1  iniciar_portal.ps1  kind-config.yaml  listar_backups_diagnostico.sh  monitor_dependencias.py  monitor_logs.ps1  monitorar_diagnostico_avancado.sh  performance_report.ps1  rebuild_omega_containers.ps1  registrar_problemas_historicos.py  rename_terms.ps1  reorganizar.py  reorganizar_estrutura.py  reorganize_project_structure.py  run_all_tests.py  run_autocura.py  run_coverage.py  run_performance.py  run_performance_tests.py  run_test.bat  run_tests.ps1  run_tests.py  (+24 more)
shared/: gerenciador_memoria.py  requirements.txt
src/: __init__.py  main.py
test-results/: junit.xml  report.html
tests/: README.md  conftest.py  env.test.example  gerador_test.py  helpers.py  saida_teste.txt  test_acoes_critico.py  test_autocura.py  test_cache.py  test_camada_integracao.py  test_deteccao_anomalias.py  test_diagnostico_avancado.py  test_diagnostico_critico.py  test_executar_monitoramento.py  test_exemplo.py  test_fluxo_autonomia.py  test_gerador_acoes.py  test_gerenciador_config.py  test_gerenciador_logs.py  test_gerenciador_memoria.py  test_guardiao_cognitivo.py  test_kubernetes_orchestrator.py  test_main.py  test_metricas.py  test_monitoramento.py  test_monitoramento_critico.py  test_observador_4d.py  test_orquestrador.py  test_orquestrador_conhecimento.py  test_rede_neural.py  test_validador_etico.py
verificar/: Dockerfile  deepcopy_generated.go  diagnostico.py  gerador_acoes.py  index.html  logistica.py  main.py  meuapp.service.placeholder  monitoramento.py  observabilidade.py  roteiro_instalacao.md  scenario_simulator.py  values.yaml
(+1044 files in other folders)
